# tsmu

./: README.rst  pyproject.toml  transmission-done.py  tsmu.py
misc/: MP3-daily-have.py  Move-Torrent-to-Correct-Location.sh  copy-from-fa.py  fix-hot.sh  justfile  trackers-populate.py  unfuck-titus.py
src/tsmu/: log.py  util.py  workers.py
src/tsmu/cli/: dupes.py  transmission_done_dramatiq.py  transmission_done_standalone.py  tsmu.py  tsmv.py  workers_flush.py
