[tool.poetry]
name = "tsmu"
version = "0.1.0"
description = "Utilities for managing torrents with Transmission (BitTorrent client)"
authors = ["Samat K Jain <_@skj.io>"]

[tool.poetry.scripts]
# transmission utilities CLI
tsmu = "tsmu.cli.tsmu:cli"
# scripts to configure w/ transmission-remote --torrent-done-script
transmission-done-standalone = "tsmu.cli.transmission_done_standalone:main"
transmission-done-dramatiq = "tsmu.cli.transmission_done_dramatiq:main"
# transmission-verify replacement, blocks until verify is done
tsmv = "tsmu.cli.tsmv:cli"
tsmu-workers-flush = "tsmu.cli.workers_flush:main"
tsmu-dupes = "tsmu.cli.dupes:run"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
transmissionrpc = "^0.11"
Pygments = "^2.13.0"
dramatiq = {extras = ["redis", "watch"], version = "^1.13.0"}
rich = "^12.5.1"
typer = "^0.6.1"
more-itertools = "^8.14.0"
tomli = "^2.0.1"
pyxdg = "^0.28"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = 'black'

[tool.pylint.messages_control]
disable = [
    "invalid-name"
]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
